--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,10 @@ h2 {
     background-color: #000;
     color: #fff;
   }
+ .form{
+    display: block;
+    width: 40%;
+}
 
 .footer {
     font-size:0.8em;
